tests/golden/kubernetes_1.25/prometheus/prometheus/50_default-instance_nodeExporter_networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    source: https://github.com/projectsyn/component-prometheus
  labels:
    app.kubernetes.io/component: exporter
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: nodeexporter-default-instance
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 1.5.0
  name: nodeexporter-default-instance
  namespace: syn-prometheus
spec:
  egress:
    - {}
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 9100
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/component: exporter
      app.kubernetes.io/name: nodeexporter-default-instance
      app.kubernetes.io/part-of: kube-prometheus
  policyTypes:
    - Egress
    - Ingress
